force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/LLC_BI__Sensitivity_Analysis__c.object-meta.xml
<CustomObject>
    <description>The Sensitivity Analysis object stores details that are used for the calculation of commercial real estate related financial indicators. The fields on this object enable users to perform sensitivity analysis on specific variables within the context of the CRE Analysis application.</description>
    <label>Sensitivity Analysis</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Sensitivity Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensitivity Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>