force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__Bundle__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the underwriting bundle.</description>
    <label>Bundle</label>
    <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
    <relationshipLabel>Sensitivity Analysis</relationshipLabel>
    <relationshipName>Sensitivity_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>