force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__lookupKey__c</fullName>
    <description>Unique key for this object.</description>
    <externalId>true</externalId>
    <label>Lookup Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>