force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__Output_1_Formula__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Output_1_Formula__c</fullName>
    <description>Formula that determines the values in the cells for either Single Variate or Multi-Variate. This is the bottom value in multi-variate cells, and the third column in single-variate tables.</description>
    <label>Output 1 Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>