force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__Output_4_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Output_4_Name__c</fullName>
    <description>Column Headers in Single Variate Table or ratio key names in Multi-Variate Tables. This is the fourth-to-last label in the multi-variate legend, and the sixth column header in single-variate tables.</description>
    <label>Output 4 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>