force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__Output_5_Formula__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Output_5_Formula__c</fullName>
    <description>Formula that determines the values in the cells for either Single Variate or Multi-Variate. This is the fifth-to-last value in multi-variate cells, and the seventh column in single-variate tables.</description>
    <label>Output 5 Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>