force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__Output_A_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Output_A_Name__c</fullName>
    <description>Column header for the adjusted variable value in single-variate only.</description>
    <label>Output A Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>