force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__Output_B_Display_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Output_B_Display_Type__c</fullName>
    <defaultValue>&quot;String&quot;</defaultValue>
    <description>Controls the formatting of the adjusted variable B. Probably always percent</description>
    <label>Output B Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LLC_BI__Sensitivity_Analysis_Display_Type</valueSetName>
    </valueSet>
</CustomField>