force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__Output_B_Formula__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Output_B_Formula__c</fullName>
    <description>Formula that determines the value of the Variable B adjusted by the user input.</description>
    <label>Output B Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>