force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__Variable_A_Direction__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Variable_A_Direction__c</fullName>
    <description>Notates that Variable A is displayed on the Y-Axis</description>
    <label>Variable A Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>