force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__Variable_A_Increments__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Variable_A_Increments__c</fullName>
    <description>Will be used for Single Variate and Multi-Variate. Used in calculations for analysis.</description>
    <label>Variable A Increments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>