force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__Variable_A_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Variable_A_Name__c</fullName>
    <description>Variable can be the only variable or it can be 1 of the 2 variables used in Multi-Variate Analysis.</description>
    <label>Variable A Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>