force-app/main/default/objects/LLC_BI__Sensitivity_Analysis__c/fields/LLC_BI__Variable_B_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Variable_B_Name__c</fullName>
    <description>One of the two variables used in Multi-Variate Analysis.</description>
    <label>Variable B Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>